2009-10-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* applib/Makefile, applib/file_1.c, applib/private.h,
	applib/userLib.h: New files.

2009-09-24	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add example for extracting values from RTEMS Application
	Makefile infrastructure.
	* extract_example/.cvsignore, extract_example/Makefile,
	extract_example/README: New files.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile: Add new program to demonstrate use of BSP command line
	arguments.
	* bspcmdline/.cvsignore, bspcmdline/Makefile, bspcmdline/README,
	bspcmdline/test.c: New files.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* minimum/test.c: Remove warning.

2009-08-06	Joel Sherrill <joel.sherrill@oarcorp.com>

	* ChangeLog: New file.
