@@ -6,4 +6,4 @@ include $(RTEMS_MAKEFILE_PATH)/Makefile.inc
 include $(RTEMS_CUSTOM)
 include $(RTEMS_ROOT)/make/directory.cfg
 
-SUBDIRS=minimum bspcmdline extract_example
+SUBDIRS=minimum bspcmdline extract_example adamain
